# MNIST-MLP

./: CLAUDE.md
.claude/: settings.json
.claude/skills/cpp-doxygen/: SKILL.md
.claude/skills/evaluate/: SKILL.md
.claude/skills/train/: SKILL.md
MNIST-CUDA/: .gitattributes  .gitignore  Makefile  README.md  Utility.cpp  Utility.hpp  mlx_submission.cpp  model.safetensors  sequential_submission.cpp  student_submission.cpp  tutor_submission.cpp
MNIST-CUDA/data/: README.md
MNIST-PyTorch/: .gitignore  pyproject.toml
MNIST-PyTorch/notebooks/: MNIST-CUDA-Check.ipynb  MNIST.ipynb
MNIST-PyTorch/src/mnist_pytorch/: __init__.py  evaluate.py  train.py
MNIST-PyTorch/src/mnist_pytorch/data/: dataset.py
