[project]
name = "mnist-pytorch"
version = "0.1.0"
description = "Custom MNIST MLP Classifier"
readme = "README.md"
authors = [
    { name = "Konstantin Zeck", email = "konstantin.zeck@tum.de" }
]
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "iprogress>=0.4",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]

[project.scripts]
mnist-pytorch = "mnist_pytorch:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.19",
]
